--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,7 +5,7 @@
 #spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
 #spring.jpa.hibernate.ddl-auto=update
 
-spring.datasource.url=jdbc:h2:tcp:localhost:9092/./test
+spring.datasource.url=jdbc:h2:tcp:localhost:9092/test
 spring.datasource.driver-class-name=org.h2.Driver
 spring.datasource.username=SA
 spring.datasource.password=
